@@ -1,7 +1,7 @@
 Source: libqmi
 Priority: optional
 Maintainer: Marius B. Kotsbak <marius@kotsbak.com>
-Build-Depends: debhelper (>= 9), dh-autoreconf, libglib2.0-dev (>= 2.32), pkg-config, intltool, gtk-doc-tools, python, libglib2.0-doc
+Build-Depends: debhelper (>= 9), dh-autoreconf, libglib2.0-dev (>= 2.32), pkg-config, intltool, gtk-doc-tools, python, libglib2.0-doc, help2man
 Standards-Version: 3.9.4
 Section: libs
 Homepage: http://www.freedesktop.org/software/libqmi
