@@ -1,0 +1,2 @@
+debian/qmicli.1
+debian/qmi-network.1
