@@ -1,0 +1,6 @@
+.\" DO NOT MODIFY THIS FILE!  It was generated by help2man 1.40.11.
+.TH USAGE: "1" "January 2013" "qmi-network"
+.SH NAME
+qmi-network \- Script to start and stop QMI network
+.SH DESCRIPTION
+usage: qmi\-network [DEVICE] [COMMAND]
