@@ -1,0 +1,58 @@
+.\" DO NOT MODIFY THIS FILE!  It was generated by help2man 1.40.11.
+.TH QMICLI "1" "January 2013" "qmicli " "User Commands"
+.SH NAME
+qmicli \- Control QMI devices
+.SH DESCRIPTION
+.SS "Usage:"
+.IP
+qmicli [OPTION...] \- Control QMI devices
+.SS "Help Options:"
+.TP
+\fB\-h\fR, \fB\-\-help\fR
+Show help options
+.TP
+\fB\-\-help\-all\fR
+Show all help options
+.TP
+\fB\-\-help\-dms\fR
+Show Device Management Service options
+.TP
+\fB\-\-help\-nas\fR
+Show Network Access Service options
+.TP
+\fB\-\-help\-wds\fR
+Show Wireless Data Service options
+.SS "Application Options:"
+.TP
+\fB\-d\fR, \fB\-\-device\fR=\fI[PATH]\fR
+Specify device path
+.TP
+\fB\-\-device\-set\-instance\-id\fR=\fI[Instance\fR ID]
+Set instance ID
+.TP
+\fB\-\-device\-open\-version\-info\fR
+Run version info check when opening device
+.TP
+\fB\-\-device\-open\-sync\fR
+Run sync operation when opening device
+.TP
+\fB\-\-client\-cid\fR=\fI[CID]\fR
+Use the given CID, don't allocate a new one
+.TP
+\fB\-\-client\-no\-release\-cid\fR
+Do not release the CID when exiting
+.TP
+\fB\-v\fR, \fB\-\-verbose\fR
+Run action with verbose logs, including the debug ones
+.TP
+\fB\-\-silent\fR
+Run action with no logs; not even the error/warning ones
+.TP
+\fB\-V\fR, \fB\-\-version\fR
+Print version
+.PP
+qmicli 1.0
+Copyright (2012) Aleksander Morgado
+License GPLv2+: GNU GPL version 2 or later <http://gnu.org/licenses/gpl\-2.0.html>
+This is free software: you are free to change and redistribute it.
+There is NO WARRANTY, to the extent permitted by law.
